    # Apps:
        * Billing :
            - No HeaderFilter for 'TemplateBase' was populated (only useful if you use recurrent documents).

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # No quick-search widget is displayed for not enumerable FK/M2M without specific field registered.
        # HeaderFilters still displayed fields which were tagged as not viewable.
        # Many methods have been marked with 'alters_data = True'.


== Version 2.6.11 ==

  Users side :
  ------------
    # The lib 'reportlab' has been pinned to "4.3.X" to work with Python 3.8; sorry.
    # The migrations of HistoryLines related to properties (and activity types)
      with PostgreSQL were not working correctly (some lines could be ignored).
    # A warning is now displayed if the settings 'SITE_DOMAIN' is not correctly defined
      (this feature has been backported from Creme 2.7).
    # Filtering with the field 'role' of a user was broken.
    # The position of the notification count indicator was wrong when exploration mode is active.
    # The migrations from Creme 2.5 were crashing if a filter references a Property Type
      which has been removed. The invalid conditions are now deleted, & you should
      fix/remove the concerned filter.
    # Apps:
        * Activities :
            - Fix a regression in calendar CSS : the filtered events or calendars were not hidden.
        * Billing :
            - The definitive deletion has been fixed: it did not work with lines
              related to Product/Service instances.
        * Assistants:
            - The dynamic trigger dates of Alerts were not always updated during an entities merging.
            - The URLs to entities in the HTML body of notification emails are now absolute.
        * Emails:
            - The URLs to entities in the HTML body of notification emails
              (when a campaign has been sent) are now absolute.

  Developers side :