@@ -1,6 +1,6 @@
 ################################################################################
 #    Creme is a free/open-source Customer Relationship Management software
-#    Copyright (C) 2009-2024  Hybird
+#    Copyright (C) 2009-2025  Hybird
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as published by
@@ -21,6 +21,7 @@
 
 from __future__ import annotations
 
+import logging
 from datetime import date
 from functools import partial
 
@@ -58,6 +59,8 @@ from creme.creme_core.utils.meta import is_date_field
 
 from ..fields import JSONField
 from . import widgets
+
+logger = logging.getLogger(__name__)
 
 
 def boolean_str(val):
@@ -202,8 +205,13 @@ class RegularFieldsConditionsField(_ConditionsField):
         field_choicetype = widgets.FieldConditionSelector.field_choicetype
 
         for condition in value:
+            error = condition.handler.error
+            if error:
+                logger.warning('The condition is invalid & so we ignored it: %s', error)
+                continue
+
             search_info = condition.value  # TODO: use condition.handler
-            operator_id = search_info['operator']
+            operator_id = search_info['operator']  # condition.handler.operator_id
             operator = self.efilter_registry.get_operator(operator_id)
 
             field = fields[condition.name][-1]
@@ -407,6 +415,11 @@ class DateFieldsConditionsField(_ConditionsField):
         fmt = self._format_date
 
         for condition in value:
+            error = condition.handler.error
+            if error:
+                logger.warning('The condition is invalid & so we ignored it: %s', error)
+                continue
+
             get = condition.value.get
             field = fields[condition.name][-1]
 
