@@ -370,6 +370,16 @@ class RegularFieldsConditionsFieldTestCase(CremeTestCase):
             condition.value,
         )
 
+        condition.filter_type = EF_REGULAR
+        self.assertJSONEqual(
+            raw=field.from_python([condition]),
+            expected_data=[{
+                'field': {'name': name, 'type': 'string'},
+                'operator': {'id': operator, 'types': 'string'},
+                'value': value,
+            }],
+        )
+
     def test_initialize(self):
         "initialize() + filter_type."
         field = RegularFieldsConditionsField(
@@ -445,25 +455,42 @@ class RegularFieldsConditionsFieldTestCase(CremeTestCase):
 
     def test_isempty_condition(self):
         "ISEMPTY (true) -> boolean."
-        clean = RegularFieldsConditionsField(
-            model=FakeContact,
-            efilter_registry=efilter_registry,
-        ).clean
+        field = RegularFieldsConditionsField(
+            model=FakeContact, efilter_registry=efilter_registry,
+        )
         operator = operators.ISEMPTY
         name = 'description'
-        condition = self.get_alone_element(
-            clean(self.build_data({
-                'operator': operator,
-                'name':     name,
-                'value':    True,
-            }))
-        )
+        condition = self.get_alone_element(field.clean(self.build_data({
+            'operator': operator,
+            'name':     name,
+            'value':    True,
+        })))
         self.assertEqual(RegularFieldConditionHandler.type_id, condition.type)
         self.assertEqual(name,                                 condition.name)
         self.assertDictEqual(
             {'operator': operator, 'values': [True]},
             condition.value,
         )
+
+        # TODO: need ordered set for FIELDTYPES_NULLABLE...
+        # self.assertJSONEqual(
+        #     raw=field.from_python([condition]),
+        #     expected_data=[{
+        #         'field': {'name': name, 'type': 'string'},
+        #         'operator': {
+        #             'id': operator,
+        #             'types': 'choices__null enum__null boolean__null user__null string fk__null',
+        #         },
+        #         'value': True,
+        #     }],
+        # )
+        condition.filter_type = EF_REGULAR
+        initial = json_load(field.from_python([condition]))
+        self.assertIsList(initial, length=1)
+        initial0 = initial[0]
+        self.assertIsDict(initial0, length=3)
+        self.assertDictEqual({'name': name, 'type': 'string'}, initial0.get('field'))
+        self.assertIs(initial0.get('value'), True)
 
     def test_isnotempty_condition(self):
         "ISEMPTY (false) -> boolean."
@@ -488,25 +515,41 @@ class RegularFieldsConditionsFieldTestCase(CremeTestCase):
         )
 
     def test_equals_boolean_condition(self):
-        clean = RegularFieldsConditionsField(
-            model=FakeOrganisation,
-            efilter_registry=efilter_registry,
-        ).clean
+        field = RegularFieldsConditionsField(
+            model=FakeOrganisation, efilter_registry=efilter_registry,
+            # model=FakeOrganisation, efilter_type=efilter_registry.id,
+        )
         operator = operators.EQUALS
         name = 'subject_to_vat'
-        condition = self.get_alone_element(
-            clean(self.build_data({
-                'operator': operator,
-                'name':     name,
-                'value':    True,
-            }))
-        )
+        condition = self.get_alone_element(field.clean(self.build_data({
+            'operator': operator, 'name': name, 'value': True,
+        })))
         self.assertEqual(RegularFieldConditionHandler.type_id, condition.type)
         self.assertEqual(name,                                 condition.name)
         self.assertDictEqual(
             {'operator': operator, 'values': [True]},
             condition.value,
         )
+
+        # TODO: need ordered set for FIELDTYPES_*...
+        # self.assertJSONEqual(
+        #     raw=field.from_python([condition]),
+        #     expected_data=[{
+        #         'field': {'name': name, 'type': 'boolean'},
+        #         'operator': {
+        #             'id': operator,
+        #             'types': '......',
+        #         },
+        #         'value': True,
+        #     }],
+        # )
+        condition.filter_type = EF_REGULAR
+        initial = json_load(field.from_python([condition]))
+        self.assertIsList(initial, length=1)
+        initial0 = initial[0]
+        self.assertIsDict(initial0, length=3)
+        self.assertDictEqual({'name': name, 'type': 'boolean'}, initial0.get('field'))
+        self.assertIs(initial0.get('value'), True)
 
     def test_fk_subfield(self):
         "FK subfield"
@@ -1000,6 +1043,27 @@ class RegularFieldsConditionsFieldTestCase(CremeTestCase):
         self.assertEqual(RegularFieldConditionHandler.type_id, condition.type)
         self.assertEqual(hidden_fname,                         condition.name)
 
+    def test_invalid_field(self):
+        field = RegularFieldsConditionsField(
+            model=FakeOrganisation, efilter_registry=efilter_registry,
+        )
+        condition = self.get_alone_element(field.clean(self.build_data({
+            'operator': operators.EQUALS, 'name': 'phone', 'value': True,
+        })))
+        condition.filter_type = EF_REGULAR
+        condition.name = 'invalid'
+
+        with self.assertLogs(level='WARNING') as logs_manager:
+            with self.assertNoException():
+                raw_json = field.from_python([condition])
+        self.assertEqual('[]', raw_json)
+
+        self.assertIn(
+            "The condition is invalid & so we ignored it: "
+            "FakeOrganisation has no field named 'invalid'",
+            logs_manager.output[0],
+        )
+
 
 # class DateFieldsConditionsFieldTestCase(FieldTestCase):
 class DateFieldsConditionsFieldTestCase(CremeTestCase):
@@ -1418,6 +1482,25 @@ class DateFieldsConditionsFieldTestCase(CremeTestCase):
                 },
             ],
             decoded_value,
+        )
+
+    def test_invalid_field(self):
+        field = DateFieldsConditionsField()
+
+        condition = DateRegularFieldConditionHandler.build_condition(
+            model=FakeContact, field_name='created', date_range='current_year',
+        )
+        condition.name = 'invalid'
+
+        with self.assertLogs(level='WARNING') as logs_manager:
+            with self.assertNoException():
+                raw_json = field.from_python([condition])
+        self.assertEqual('[]', raw_json)
+
+        self.assertIn(
+            "The condition is invalid & so we ignored it: "
+            "FakeContact has no field named 'invalid'",
+            logs_manager.output[0],
         )
 
 
