@@ -18,7 +18,8 @@
     Non breaking changes :
     ----------------------
         # No quick-search widget is displayed for not enumerable FK/M2M without specific field registered.
-        # HeaderFilters still displayed fields which were tagged as not viewable.
+        # Fields which are stored in configuration then tagged as not viewable are now better
+          managed by HeaderFilters & EntityFilters.
         # Many methods have been marked with 'alters_data = True'.
 
 
